PDI-2365 : Repository : simplify, abstract, turn into an interface
git-svn-id: svn://source.pentaho.org/svnkettleroot/Kettle/trunk@10633 5fb7f6ec-07c1-534a-b4ca-9155e429e800